# TheFightingGame

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
assets/data/: Controles_p1.poo  Controles_p2.poo  Historial.poo  InfoPublicaJugadores.txt  Menu_Referencia_Botones.txt  The_Fighting_Game.zpr  sound effects.flp
include/: Assets.h  Battleground.h  Controles.h  Controles_Player_1.h  Controles_Player_2.h  Efectos_de_sonido_menus.h  Escena.h  Fighting_Escena.h  FileIO.h  Healt_Bar.h  InfoJugadores.h  Juego.h  Kratos.h  Menu_Controls.h  Menu_General.h  Menu_Inicio.h  Menu_Pause.h  Menu_Seleccion_Personaje.h  Menu_options.h  Pantalla_principal.h  Pantalla_principal_background.h  Personaje_1_escena_fighting.h  Players_selected.h  Presentacion_Round.h  Round.h  Seleccion_De_Personaje_Escena.h  Sub_Zero.h
src/: Battleground.cpp  Controles.cpp  Controles_Player_1.cpp  Controles_Player_2.cpp  Efectos_de_sonido_menus.cpp  Escena.cpp  Fighting_Escena.cpp  Healt_Bar.cpp  InfoJugadores.cpp  Juego.cpp  Kratos.cpp  Menu_Controls.cpp  Menu_General.cpp  Menu_Inicio.cpp  Menu_Main_Menu.cpp  Menu_Pause.cpp  Menu_Seleccion_Personaje.cpp  Menu_options.cpp  Pantalla_principal.cpp  Pantalla_principal_background.cpp  Personaje_1_escena_fighting.cpp  Players_selected.cpp  Presentacion_Round.cpp  Round.cpp  Seleccion_De_Personaje_Escena.cpp  Sub_Zero.cpp  main.cpp  main2.cpp
